doc/v1.4.16/_sources/tutorial_server_variable.rst.txt
Adding Variables to a Server
----------------------------

This tutorial shows how to work with data types and how to add variable nodes
to a server. First, we add a new variable to the server. Take a look at the
definition of the ``UA_VariableAttributes`` structure to see the list of all
attributes defined for VariableNodes.

Note that the default settings have the AccessLevel of the variable value as
read only. See below for making the variable writable.

.. code-block:: c

   
   #include <open62541/plugin/log_stdout.h>
   #include <open62541/server.h>
   #include <stdio.h>
   
   static void
   addVariable(UA_Server *server) {
       /* Define the attribute of the myInteger variable node */
       UA_VariableAttributes attr = UA_VariableAttributes_default;
       UA_Int32 myInteger = 42;
       UA_Variant_setScalar(&attr.value, &myInteger, &UA_TYPES[UA_TYPES_INT32]);
       attr.description = UA_LOCALIZEDTEXT("en-US","the answer");
       attr.displayName = UA_LOCALIZEDTEXT("en-US","the answer");
       attr.dataType = UA_TYPES[UA_TYPES_INT32].typeId;
       attr.accessLevel = UA_ACCESSLEVELMASK_READ | UA_ACCESSLEVELMASK_WRITE;
   
       /* Add the variable node to the information model */
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "the.answer");
       UA_QualifiedName myIntegerName = UA_QUALIFIEDNAME(1, "the answer");
       UA_NodeId parentNodeId = UA_NODEID_NUMERIC(0, UA_NS0ID_OBJECTSFOLDER);
       UA_NodeId parentReferenceNodeId = UA_NODEID_NUMERIC(0, UA_NS0ID_ORGANIZES);
       UA_Server_addVariableNode(server, myIntegerNodeId, parentNodeId,
                                 parentReferenceNodeId, myIntegerName,
                                 UA_NODEID_NUMERIC(0, UA_NS0ID_BASEDATAVARIABLETYPE), attr, NULL, NULL);
   }
   
   static void
   addMatrixVariable(UA_Server *server) {
       UA_VariableAttributes attr = UA_VariableAttributes_default;
       attr.displayName = UA_LOCALIZEDTEXT("en-US", "Double Matrix");
       attr.accessLevel = UA_ACCESSLEVELMASK_READ | UA_ACCESSLEVELMASK_WRITE;
   
       /* Set the variable value constraints */
       attr.dataType = UA_TYPES[UA_TYPES_DOUBLE].typeId;
       attr.valueRank = UA_VALUERANK_TWO_DIMENSIONS;
       UA_UInt32 arrayDims[2] = {2,2};
       attr.arrayDimensions = arrayDims;
       attr.arrayDimensionsSize = 2;
   
       /* Set the value. The array dimensions need to be the same for the value. */
       UA_Double zero[4] = {0.0, 0.0, 0.0, 0.0};
       UA_Variant_setArray(&attr.value, zero, 4, &UA_TYPES[UA_TYPES_DOUBLE]);
       attr.value.arrayDimensions = arrayDims;
       attr.value.arrayDimensionsSize = 2;
   
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "double.matrix");
       UA_QualifiedName myIntegerName = UA_QUALIFIEDNAME(1, "double matrix");
       UA_NodeId parentNodeId = UA_NODEID_NUMERIC(0, UA_NS0ID_OBJECTSFOLDER);
       UA_NodeId parentReferenceNodeId = UA_NODEID_NUMERIC(0, UA_NS0ID_ORGANIZES);
       UA_Server_addVariableNode(server, myIntegerNodeId, parentNodeId,
                                 parentReferenceNodeId, myIntegerName,
                                 UA_NODEID_NUMERIC(0, UA_NS0ID_BASEDATAVARIABLETYPE),
                                 attr, NULL, NULL);
   }
   
Now we change the value with the write service. This uses the same service
implementation that can also be reached over the network by an OPC UA client.

.. code-block:: c

   
   static void
   writeVariable(UA_Server *server) {
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "the.answer");
   
       /* Write a different integer value */
       UA_Int32 myInteger = 43;
       UA_Variant myVar;
       UA_Variant_init(&myVar);
       UA_Variant_setScalar(&myVar, &myInteger, &UA_TYPES[UA_TYPES_INT32]);
       UA_Server_writeValue(server, myIntegerNodeId, myVar);
   
       /* Set the status code of the value to an error code. The function
        * UA_Server_write provides access to the raw service. The above
        * UA_Server_writeValue is syntactic sugar for writing a specific node
        * attribute with the write service. */
       UA_WriteValue wv;
       UA_WriteValue_init(&wv);
       wv.nodeId = myIntegerNodeId;
       wv.attributeId = UA_ATTRIBUTEID_VALUE;
       wv.value.status = UA_STATUSCODE_BADNOTCONNECTED;
       wv.value.hasStatus = true;
       UA_Server_write(server, &wv);
   
       /* Reset the variable to a good statuscode with a value */
       wv.value.hasStatus = false;
       wv.value.value = myVar;
       wv.value.hasValue = true;
       UA_Server_write(server, &wv);
   }
   
Note how we initially set the DataType attribute of the variable node to the
NodeId of the Int32 data type. This forbids writing values that are not an
Int32. The following code shows how this consistency check is performed for
every write.

.. code-block:: c

   
   static void
   writeWrongVariable(UA_Server *server) {
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "the.answer");
   
       /* Write a string */
       UA_String myString = UA_STRING("test");
       UA_Variant myVar;
       UA_Variant_init(&myVar);
       UA_Variant_setScalar(&myVar, &myString, &UA_TYPES[UA_TYPES_STRING]);
       UA_StatusCode retval = UA_Server_writeValue(server, myIntegerNodeId, myVar);
       printf("Writing a string returned statuscode %s\n", UA_StatusCode_name(retval));
   }
   
It follows the main server code, making use of the above definitions.

.. code-block:: c

   
   int main(void) {
       UA_Server *server = UA_Server_new();
   
       addVariable(server);
       addMatrixVariable(server);
       writeVariable(server);
       writeWrongVariable(server);
   
       UA_Server_runUntilInterrupt(server);
       UA_Server_delete(server);
       return 0;
   }
